@@ -23,6 +23,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - Fixed an issue with properly RFC 2047 encoding the display name in the
+      From: header for messages with DMARC mitigations.  (LP: #1643210)
+
     - Fixed an issue causing UnicodeError in sending digests following a
       change of a list's preferred_language.  (LP: #1644356)
 
